# lodestone

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
src/lodestone/: __init__.py  cli.py  config.py
src/lodestone/ai/: budget.py  cost.py  orchestrator.py  provider.py
src/lodestone/hub/: commands.py  control.py  frontbot.py  loop.py  permissions.py  protocol.py  router.py  runner.py  tools.py  userbot.py
src/lodestone/memory/: __init__.py  client.py
src/lodestone/registry/: db.py  models.py
src/lodestone/web/: __init__.py  app.py  auth.py
src/lodestone/web/static/: index.html
tests/: test_cli.py  test_hub_surfaces.py  test_loop_budget.py  test_loop_commands.py  test_loop_protocol.py  test_loop_supervisor.py  test_memory_client.py  test_orchestrator_memory.py  test_project_dispatch.py  test_runner_memory.py  test_web_app.py
