[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lodestone-hub"
version = "0.1.0"
description = "Lodestone — a single-channel control plane for a Telegram agent fleet."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "telethon>=1.36",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
lodestone = "lodestone.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lodestone.web" = ["static/*"]
